1/23/14 move ph-scale-basics sim title to ph-scale-basics-strings_en.json
1/23/13 make 'Basics' screen an official part of ph-scale sim
1/23/13 MAJOR DESIGN CHANGES REQUESTED
# 1.0.0-dev.6 1/22/14
1/22/14 clip ratio feature to shape of solution in beaker
1/22/14 implement ratio feature as it was in Java, too slow to be usable, not clipped to solution bounds
1/22/14 add Beaker.bounds convenience property
1/21/14 replace instances of HTMLText with SubSupText
# 1.0.0-dev.5 1/21/14
1/21/14 zoom buttons for linear graph
1/20/14 robust implementation for vertical alignment of graph and pH scales
1/20/14 add options.range to PHScaleNode
1/19/14 reorganize CustomGraphNode so that order of instantiation in constructor matches order of appearance
1/19/14 detect and remember the graph ticks that correspond to the min and max pH values
1/19/14 move 'guide' lines for alignment of scale to the top and bottom ticks of the pH scale
1/19/14 temporary solution for vertical alignment of graph and pH scales
1/16/14 placeholder for SubSupText
1/16/14 center log/linear switch
1/16/14 shrink units switch if it exceeds maximum width, to handle i18n
1/16/14 migrate ExpandCollapseBar to sun
1/16/14 generalize ExpandCollapseBar
1/16/14 add placeholder for LinearGraph
1/16/14 attach beaker controls to left edge of beaker so that i18n strings have room to grow
1/16/14 shrink 'Molecule count' feature slightly and reposition so that it doesn't overlap beaker tick labels
1/16/14 migrate OnOffSwitch and ABSwitch to sun
1/16/14 change look of ABSwitch labels based on which one is selected
1/16/14 generalize ABSwitch so that the labels are {Node} instead of {String}, and it handles enable/disable of the labels
1/16/14 change the cursor when interactive graph indicators are disabled
# 1.0.0-dev.4 1/15/14
1/15/14 push duplicate code into GraphIndicatorDragHandler
1/15/14 change the structure of PHModel, it was acting flakey when returning an object literal